used js to create 16x16 grid and display in html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    
+    <div class="header">Etch-a-Sketch</div>
+    <div class="main-container">
+        <div id="grid-container" class="grid"></div>
+    </div>
 
-    <div class="footer">Created by moneysnipertang</div>
+    <script src="script.js"></script>
 </body>
 </html>
