--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="header">Etch-a-Sketch</div>
     <div class="main-container">
+        <div class="settings">
+            <button class="reset-button">Reset</button>
+        </div>
         <div id="grid-container" class="grid"></div>
     </div>
 
