--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <input type="range" min="1" max="64" value="16" class="slider" id="slider-range" oninput="changeGridSize(this)">
             </div>
         </div>
-        <div id="grid-container" class="grid"></div>
+        <div class="grid-wrapper">
+            <div id="grid-container" class="grid"></div>
+        </div>
+        
     </div>
 
     <script src="script.js"></script>
