added color wheel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="header">Etch-a-Sketch</div>
     <div class="main-container">
         <div class="settings">
+            <div class="color-picker">
+                <input type="color" id="color-choice">
+                <div>Pen Color</div>
+            </div>
             <button class="reset-button">Reset</button>
             <div class="slider-container">
                 <div class="range-output">16x16</div>
